--- a/map.html
+++ b/map.html
@@ -681,23 +681,23 @@
 			var icons = {
 				operating: {
 					name: "Dedicated",
-					icon: "https://churchofjesuschristtemples.org/assets/img/closed-temple-marker.png"
+					icon: "/assets/img/operating-temple-marker.png"
 				},
 				renovation: {
 					name: "Under Renovation",
-					icon: "https://churchofjesuschristtemples.org/assets/img/under-renovation-temple-marker.png"
+					icon: "/assets/img/under-renovation-temple-marker.png"
 				},
 				construction: {
 					name: "Under Construction",
-					icon: "https://churchofjesuschristtemples.org/assets/img/under-construction-temple-marker.png"
+					icon: "/assets/img/under-construction-temple-marker.png"
 				},
 				announced: {
 					name: "Announced",
-					icon: "https://churchofjesuschristtemples.org/assets/img/announced-temple-marker.png"
+					icon: "/assets/img/announced-temple-marker.png"
 				},
 				closed: {
 					name: "Temporarily Closed",
-					icon: "https://churchofjesuschristtemples.org/assets/img/closed-temple-marker.png"
+					icon: "/assets/img/closed-temple-marker.png"
 				}
 			};
 				
