--- a/map.html
+++ b/map.html
@@ -25,27 +25,27 @@
         // Definir los íconos para cada estado
         const icons = {
             announced: L.icon({
-                iconUrl: "URL_ICONO_ANNOUNCED",
+                iconUrl: "imagenes/announced.png",
                 iconSize: [30, 40],
                 iconAnchor: [15, 40],
             }),
             operating: L.icon({
-                iconUrl: "URL_ICONO_DEDICATED",
+                iconUrl: "imagenes/operating.png",
                 iconSize: [30, 40],
                 iconAnchor: [15, 40],
             }),
             construction: L.icon({
-                iconUrl: "URL_ICONO_UNDER_CONSTRUCTION",
+                iconUrl: "imagenes/construccion.png",
                 iconSize: [30, 40],
                 iconAnchor: [15, 40],
             }),
             renovation: L.icon({
-                iconUrl: "URL_ICONO_UNDER_RENOVATION",
+                iconUrl: "imagenes/renovation.png",
                 iconSize: [30, 40],
                 iconAnchor: [15, 40],
             }),
             closed: L.icon({
-                iconUrl: "URL_ICONO_TEMPORARY_CLOSED",
+                iconUrl: "imagenes/closed.png",
                 iconSize: [30, 40],
                 iconAnchor: [15, 40],
             }),
